<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ParentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnLoadTemplateInspect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:onClick="loadTemplateToInspect"
        android:text="Start Inspection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnLoadTemplateEdit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="loadTemplateToEdit"
        android:text="Edit Template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoadTemplateInspect" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="onShare"
        android:text="Share File"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoadTemplateEdit" />

    <Button
        android:id="@+id/btnNewTemplate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="showFilename"
        android:text="Create New Template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/btnShare" />

    <Button
        android:id="@+id/btnFileManagerBack"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="Back"
        app:layout_constraintEnd_toEndOf="@+id/btnNewTemplate"
        app:layout_constraintStart_toStartOf="@+id/btnNewTemplate"
        app:layout_constraintTop_toBottomOf="@+id/filename_layout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/clipboardnb2" />

    <LinearLayout
        android:id="@+id/filename_layout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btnNewTemplate"
        app:layout_constraintStart_toStartOf="@+id/btnNewTemplate"
        app:layout_constraintTop_toBottomOf="@+id/btnNewTemplate">

        <EditText
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:background="#FFFFFF"
            android:ems="4"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="text"
            android:singleLine="true"
            android:text=" Filename:" />

        <EditText
            android:id="@+id/filename_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:ems="7"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="NewTemplate" />

        <Button
            android:id="@+id/accept_filename"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@android:drawable/ic_input_add"
            android:gravity="center_vertical"
            android:minWidth="20dip"
            android:onClick="onCreateNewTemplate"
            android:text="GO"
            android:textAlignment="center" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>