...
        android:id="@+id/imageView"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="#555"
        android:text="Open Camera"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
...
