<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/templatEditLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/filename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"
        android:text="Filename"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toTopOf="@+id/pdf"
        app:layout_constraintEnd_toEndOf="@+id/filename"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filename">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayoutPdf"
                android:layout_width="595dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </HorizontalScrollView>

    <Button
        android:id="@+id/pdf"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#555"
        android:onClick="printPdf"
        android:text="Preview"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inspectBack"
        app:layout_constraintStart_toEndOf="@+id/save" />

    <Button
        android:id="@+id/inspectBack"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#555"
        android:onClick="onBack"
        android:text="Exit"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#555"
        android:onClick="onSave"
        android:text="Save"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>