...
        android:background="#555"
        android:onClick="onAddPage"
        android:text="Page"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/add_heading_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
...
        android:background="#555"
        android:onClick="onAddText"
        android:text="Short Q"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/add_para_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
...
